<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.register.ActivityRegister">

    <data>
        <variable
            name="viewModel"
            type="id.semisama.app.ui.auth.register.ViewModelRegister" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            app:title="@{viewModel.title}"
            app:onNavigationBackClick="@{viewModel.onClickedUpButton}"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelTitleRegister"
                    android:textColor="@color/black_100"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/labelDescRegister"
                    android:textColor="@color/black_90"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/labelName"
                    android:textColor="@color/black_70"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:error="@{viewModel.nameError}"
                    app:errorEnabled="@{viewModel.nameError != null}"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelHintName"
                        android:inputType="text"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:text="@={viewModel.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/labelPhone"
                    android:textColor="@color/black_70"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:error="@{viewModel.phoneError}"
                    app:errorEnabled="@{viewModel.phoneError != null}"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelHintPhone"
                        android:inputType="number"
                        android:maxLength="@{viewModel.maxLength}"
                        android:digits="1234567890"
                        android:singleLine="true"
                        android:text="@={viewModel.phone}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/labelEmail"
                    android:textColor="@color/black_70"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:error="@{viewModel.emailError}"
                    app:errorEnabled="@{viewModel.emailError != null}"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelHintEmail"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:text="@={viewModel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/labelPassword"
                    android:textColor="@color/black_70"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:error="@{viewModel.passwordError}"
                    app:errorEnabled="@{viewModel.passwordError != null}"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelHintPassword"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:text="@={viewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/labelPasswordConfirmation"
                    android:textColor="@color/black_70"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPasswordConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:error="@{viewModel.passwordConfirmationError}"
                    app:errorEnabled="@{viewModel.passwordConfirmationError != null}"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelHintPassword"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:text="@={viewModel.passwordConfirmation}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvTermAndCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/labelTermPrivacy"
                    android:textColor="@color/black_70"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="32dp"
                    android:enabled="@{viewModel.isButtonEnabled, default=false}"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{viewModel::onClickedRegister}"
                    android:text="@string/labelRegister"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <include
            layout="@layout/dialog_loading"
            app:visibility="@{viewModel.loadingVisibility}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

